--- a/HotelReservation/Views/Hotel/HotelProfile.cshtml
+++ b/HotelReservation/Views/Hotel/HotelProfile.cshtml
@@ -4,8 +4,8 @@
 <h1>Hotel Profile</h1>
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-10">
+    <div class="row" >
+        <div style=" width:100%;display:flex;justify-content:center;align-items:center">
             @await Html.PartialAsync("_HotelProfilePartial", Model.Hotel)
         </div>
         <div class="col-lg-4">
